Added ui separate file

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "clang-tidy.buildPath": "build"
+    "clang-tidy.buildPath": "build",
+    "files.associations": {
+        "memory": "cpp"
+    }
 }
