Added WIP state with error

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "clang-tidy.buildPath": "build",
     "files.associations": {
         "memory": "cpp"
-    }
+    },
+    "editor.formatOnSave": true
 }
