--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -1,6 +1,7 @@
+file(GLOB SRC_FILES    
+    "components/*.cpp"
+    "systems/*.cpp"
+    "*.cpp"
+)
 target_sources(${PROJECT_NAME} 
-    PRIVATE 
-        components/orbiter.cpp 
-        components/position.cpp
-        systems/orbiting.cpp
-        engine.cpp)
+    PRIVATE ${SRC_FILES})
