--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
           branch: gh-pages # The branch the action should deploy to.
           folder: docs # The folder the action should deploy.
       - name: Notify Pushover
-        if: ${{ always() && job.status == 'failure' }}
+        if: ${{ failure() }}
         uses: desiderati/github-action-pushover@v1
         with:
           job-status: ${{ job.status }}
