--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           branch: gh-pages # The branch the action should deploy to.
           folder: docs # The folder the action should deploy.
-      - name: Notify Pushover
+      - name: Notify Pushover in case of failure
         if: ${{ failure() }}
         uses: desiderati/github-action-pushover@v1
         with:
