Added version + timestamp after running build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,37 @@
 cmake_minimum_required(VERSION 3.18)
+
+# Get the current working branch
+execute_process(
+  COMMAND git rev-parse --abbrev-ref HEAD
+  WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+  OUTPUT_VARIABLE GIT_BRANCH
+  OUTPUT_STRIP_TRAILING_WHITESPACE
+)
+
+# Get the latest abbreviated commit hash of the working branch
+execute_process(
+  COMMAND git log -1 --format=%h
+  WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+  OUTPUT_VARIABLE GIT_COMMIT_HASH
+  OUTPUT_STRIP_TRAILING_WHITESPACE
+)
+
+string(TIMESTAMP BUILD_TIME "%d.%m.%Y %H:%M:%S")
+add_definitions(-DBUILD_TIME="${BUILD_TIME}")
+
+message(STATUS "Git current branch: ${GIT_BRANCH}")
+message(STATUS "Git commit hash: ${GIT_COMMIT_HASH}")
+message(STATUS "Build date: ${BUILD_TIME}")
+
+message(STATUS "Generating version.h")
+
+configure_file(
+  ${CMAKE_SOURCE_DIR}/include/version.h.in
+  ${CMAKE_BINARY_DIR}/generated/version.h
+)
+
+include_directories(${CMAKE_BINARY_DIR}/generated)
+
 # create project
 project(spacebusiness 
     VERSION 0.1.2
@@ -20,7 +53,7 @@ endif()
 
 # add executable
 add_executable(${PROJECT_NAME} src/main.cpp)
-target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra -Wpedantic -Wno-literal-suffix -Wno-reserved-user-defined-literal -Wno-user-defined-literals)
+target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra -Wpedantic)
 target_include_directories(${PROJECT_NAME} PRIVATE src)
 
 
